--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -28,7 +28,17 @@ en:
       - name: Team
         url: '#team'
         weight: 40
+      - name: Results
+        url: '#results'
+        weight: 50
+      - name: Publications
+        url: '#publications'
+        weight: 60
+      - name: Bibliography
+        url: 'https://colaf.huma-num.fr/bibliography/'
+        weight: 70
       - name: Contact
         url: '#contact'
-        weight: 50
+        weight: 80
+
     
