--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,18 @@ main:
   - name: Equipe
     url: '#team'
     weight: 40
+  - name: Résultats
+    url: '#results'
+    weight: 50
+  - name: Publications
+    url: '#publications'
+    weight: 60
+  - name: Bibliographie
+    url: 'https://colaf.huma-num.fr/bibliography/'
+    weight: 70
   - name: Contact
     url: '#contact'
-    weight: 50
+    weight: 80
     
 
 # Link to a PDF of your resume/CV from the menu.
